--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "stellar-sdk",
   "version": "0.13.0",
   "description": "stellar-sdk is a library for working with the Stellar Horizon server.",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "babel-node ./node_modules/.bin/gulp test",
     "docs": "jsdoc -c .jsdoc.json --verbose",
